--- a/office/templates/office/company_list.html
+++ b/office/templates/office/company_list.html
@@ -86,6 +86,8 @@
 
                   {% endif %}
                 </div>
+                {% include 'partials/_pagination.html' with page_obj=companies only %}
+
             </div>
         </div>
     </div>
