--- a/office/templates/office/research_list.html
+++ b/office/templates/office/research_list.html
@@ -76,6 +76,8 @@
                         </table>
 </div>
                   {% endif %}
+                  {% include 'partials/_pagination.html' with page_obj=companies only %}
+
                 </div>
             </div>
         </div>
