--- a/userInterface/templates/userInterface/analyst-list.html
+++ b/userInterface/templates/userInterface/analyst-list.html
@@ -86,6 +86,8 @@
                         </table>
 
               </div>
+              {% include 'partials/_pagination.html' with page_obj=analysts only %}
+
             </div>
           </div>
           </div>
