--- a/office/templates/office/analysts-list.html
+++ b/office/templates/office/analysts-list.html
@@ -105,6 +105,8 @@
 
                   {% endif %}
                 </div>
+                {% include 'partials/_pagination.html' with page_obj=analayts only %}
+
             </div>
         </div>
     </div>
