--- a/office/templates/office/catgory-list.html
+++ b/office/templates/office/catgory-list.html
@@ -76,6 +76,7 @@
 </div>
                   {% endif %}
                 </div>
+                {% include 'partials/_pagination.html' with page_obj=categories only %}
             </div>
         </div>
     </div>
