--- a/office/templates/office/rates-list.html
+++ b/office/templates/office/rates-list.html
@@ -119,6 +119,7 @@
                         </table>
 </div>
                   {% endif %}
+                 {% include 'partials/_pagination.html' with page_obj=rates only %}
                 </div>
             </div>
         </div>
