--- a/userInterface/templates/userInterface/expect-list.html
+++ b/userInterface/templates/userInterface/expect-list.html
@@ -127,19 +127,19 @@
                         <tbody>
                         {% for item in expects %}
                             <tr>
-                                <td class="d-flex" style="justify-content: center;">
-                                             {% if request.user.user_type == 3 %}
-                                              <a  href="{% url 'add_wish' item.CompanyEntered.pk %}">
-                                                <i class="far fa-bookmark"></i>
+                                <td class="d-flex" style="justify-content: space-around; ">
+                                    {% if request.user.user_type == 3 %}
+                                     <a  href="{% url 'add_wish' item.CompanyEntered.pk %}" style="margin-inline:0.2 ;">
+                                       <i class="far fa-bookmark"></i>
 </a>           
 
-      {% endif %}
-                                             <a href="{% url 'user-company' item.CompanyEntered.pk %}">
+{% endif %}
+                                    <a href="{% url 'user-company' item.CompanyEntered.pk %}">
 
-                                        <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
+                               <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
 </a>
-    
-                                </td>
+
+                       </td>
                                 <td>
 
                                         <a href="{% url 'user-research' item.ResearchCompany.pk %}">
@@ -186,6 +186,8 @@
                     </table>
 
                 </div>
+                {% include 'partials/_pagination.html' with page_obj=expects only %}
+
             </div>
           </div>
          </div>
