--- a/userInterface/templates/userInterface/expectreal-list.html
+++ b/userInterface/templates/userInterface/expectreal-list.html
@@ -125,12 +125,19 @@
                         <tbody>
                         {% for item in expects %}
                             <tr>
-                              <td class="text-xxs">
-                                                                            <a href="{% url 'user-company' item.CompanyEntered.pk %}">
-                                    <p class=" text-xxs"> {{ item.CompanyEntered.name }}</p>
-                                                                            </a>
+                                <td class="d-flex" style="justify-content: space-around; ">
+                                    {% if request.user.user_type == 3 %}
+                                     <a  href="{% url 'add_wish' item.CompanyEntered.pk %}" style="margin-inline:0.2 ;">
+                                       <i class="far fa-bookmark"></i>
+</a>           
 
-                                </td>
+{% endif %}
+                                    <a href="{% url 'user-company' item.CompanyEntered.pk %}">
+
+                               <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
+</a>
+
+                       </td>
                                 <td>
 
                                           <a href="{% url 'user-research' item.ResearchCompany.pk %}">
@@ -178,6 +185,7 @@
                     </table>
 
                 </div>
+                {% include 'partials/_pagination.html' with page_obj=expects only %}
 
             </div>
           </div>
