--- a/userInterface/templates/userInterface/capital-profile.html
+++ b/userInterface/templates/userInterface/capital-profile.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <section class="min-vh-85 mb-8">
-    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/home-back.jpg');">
+    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/aida.jpeg');background-position: right;background-origin: content-box;">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto pt-lg-5">
