--- a/templates/header.html
+++ b/templates/header.html
@@ -86,6 +86,14 @@
                     <span class="nav-link-text me-1">ملكية الأسهم</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link " href="{% url 'all-AllCompanyOwners' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-building text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">الشركات المالكة</span>
+                </a>
+            </li>
 
 {% if request.user.user_type == 1 %}
             <li class="nav-item mt-3">
