--- a/userInterface/templates/userInterface/capital-profile.html
+++ b/userInterface/templates/userInterface/capital-profile.html
@@ -275,7 +275,7 @@
   </div>
   
   <div class="card-body px-0 pb-2">
-   {% include 'partials/_ownerTable.html' with arrows=arrows %}
+   {% include 'partials/_companyArrowsOwnersTable.html' with companyarrows=data.company_that_owned.all %}
            </div>
   </div>
   </div>
