--- a/owners/templates/owners/ownerProfile.html
+++ b/owners/templates/owners/ownerProfile.html
@@ -50,7 +50,7 @@
         <div class="col-12 col-xl-12 pt-3">
             <div class="card h-100">
   <div class="card-header pb-0 p-3 justify-content-center">
-    <h6 class="mb-0 text-center">ملكيات كبار الملاك</h6>
+    <h6 class="mb-0 text-center">إجمالى ملكيات كبار الملاك</h6>
   </div>
   
   <div class="card-body px-0 pb-2">
@@ -64,7 +64,7 @@
         <div class="col-12 col-xl-12 pt-3">
             <div class="card h-100">
   <div class="card-header pb-0 p-3 justify-content-center">
-    <h6 class="mb-0 text-center">ملكيات كبار الملاك  "الشركات - المؤسسات"</h6>
+    <h6 class="mb-0 text-center">ملكيات كبار الملاك "الشركات - المؤسسات"</h6>
   </div>
 
   <div class="card-body px-0 pb-2">
