--- a/templates/mobileMenu.html
+++ b/templates/mobileMenu.html
@@ -54,7 +54,14 @@
                     <span class="nav-link-text me-1">القطاعات</span>
                 </a>
             </li>
-
+  <li class="nav-item">
+                <a class="nav-link " href="{% url 'all-AllCompanyOwners' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-building text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">الشركات المالكة</span>
+                </a>
+            </li>
 
                         <li class="nav-item">
                 <a class="nav-link " href="{% url 'company-list' %}">
