--- a/owners/templates/owners/ownerProfile.html
+++ b/owners/templates/owners/ownerProfile.html
@@ -54,7 +54,7 @@
   </div>
   
   <div class="card-body px-0 pb-2">
-     {% include 'partials/_ownerProfileTable.html' with arrows=data %}
+     {% include 'partials/_ownerTable.html' with arrows=data %}
            </div>
   </div>
   </div>
@@ -64,7 +64,7 @@
         <div class="col-12 col-xl-12 pt-3">
             <div class="card h-100">
   <div class="card-header pb-0 p-3 justify-content-center">
-    <h6 class="mb-0 text-center">ملكيات كبار الملاك "الشركات - المؤسسات"</h6>
+    <h6 class="mb-0 text-center">ملكيات كبار الملاك   "الشركات - المؤسسات"</h6>
   </div>
 
   <div class="card-body px-0 pb-2">
