--- a/owners/templates/owners/ownerUserlist.html
+++ b/owners/templates/owners/ownerUserlist.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <section class="min-vh-85 mb-8">
-    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/tada.jpg');">
+    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/ksa22.jpg');">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto pt-lg-5">
@@ -21,7 +21,7 @@
                 <div class="col-12 col-xl-12 pt-5">
                     <div class="card h-100">
           <div class="card-header pb-0 p-3">
-            <h6 class="mb-0">ملكيات الأسهم</h6>
+            <h6 class="mb-0">ملكيات الشركات <strong>أفراد</strong> </h6>
           </div>
           
           <div class="card-body px-0 pb-2">
@@ -35,11 +35,11 @@
                 <div class="col-12 col-xl-12 pt-5">
                     <div class="card h-100">
           <div class="card-header pb-0 p-3">
-            <h6 class="mb-0">ملكيات كبار الملاك للشركات</h6>
+            <h6 class="mb-0">ملكيات الشركات <strong> المؤسسات - الحكومة</strong></h6>
           </div>
 
           <div class="card-body px-0 pb-2">
-            {% include 'partials/_companiesArrowTable.html' with companyarrows=companyarrows %}
+            {% include 'partials/_companyArrowsOwnersTable.html' with companyarrows=companyarrows %}
                    </div>
 
           </div>
