--- a/templates/masterheader.html
+++ b/templates/masterheader.html
@@ -1,7 +1,7 @@
 {% load static %}
  <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent mt-4">
     <div class="container">
-      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="{% url 'user-home' %}">
+      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="https://www.maaal.com/">
           <img src="{% static 'images/short_logo.png' %}" class="logo_login" />
 
       </a>
@@ -80,10 +80,6 @@
          {% if request.user.user_type == 3  %}
           <li class="nav-item">
             <a href="{% url 'all_wish' %}" class="btn btn-sm text-white bg-maal text-bold  btn-round mb-0 me-1 text-lg">المحفظة <span class="text-white text-lg" style="margin-inline:0.2rem;"> {{ request.session.wish_count }}</span></a>
-          </li>
-          {% else %}
-           <li class="nav-item">
-            <a href="https://www.maaal.com/" class="btn btn-sm text-white bg-maal  btn-round text-bold mb-0 me-1">موقعنا</a>
           </li>
          {% endif %}
         </ul>
