--- a/userInterface/templates/userInterface/home-page.html
+++ b/userInterface/templates/userInterface/home-page.html
@@ -60,7 +60,7 @@
                      <div class="col-12 col-xl-12 pt-5">
         <div class="card h-100 pt-3">
 <div class="card-header pb-0 p-3">
-    <h6 class="mb-0 text-center">ملكيات "الشركات - المؤسسات"</h6>
+    <h6 class="mb-0 text-center">ملكيات <strong>الشركات - المؤسسات</strong></h6>
 </div>
 
 <div class="card-body px-0 pb-2">
@@ -82,7 +82,7 @@
                           <div class="col-12 col-xl-12 pt-5">
         <div class="card h-100 pt-3">
 <div class="card-header pb-0 p-3">
-    <h6 class="mb-0 text-center">إجمالى ملكيات كبار الملاك</h6>
+    <h6 class="mb-0 text-center"><strong>إجمالى</strong> ملكيات كبار الملاك</h6>
 </div>
 
 <div class="card-body px-0 pb-2">
